--- a/package.json
+++ b/package.json
@@ -1,27 +1,34 @@
 {
   "name": "webpack-react-typescript-boilerplate",
-  "version": "0.0.1",
-  "private": true,
-  "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "styled-components": "^5.3.0"
-  },
+  "version": "0.0.2",
   "scripts": {
-    "start": "webpack serve",
-    "build": "webpack build"
+    "build": "webpack",
+    "production": "NODE_ENV=production webpack --progress"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/17-sss/webpack-react-typescript-boilerplate.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/17-sss/webpack-react-typescript-boilerplate/issues"
+  },
+  "homepage": "https://github.com/17-sss/webpack-react-typescript-boilerplate#readme",
+  "description": "",
   "devDependencies": {
+    "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
-    "@types/styled-components": "^5.1.11",
-    "css-loader": "^5.2.7",
-    "file-loader": "^6.2.0",
+    "@types/webpack": "^5.28.0",
     "html-webpack-plugin": "^5.3.2",
-    "style-loader": "^3.1.0",
     "ts-loader": "^9.2.3",
     "typescript": "^4.3.5",
     "webpack": "^5.44.0",
-    "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-cli": "^4.7.2"
+  },
+  "dependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
