--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "webpack-react-typescript-boilerplate",
   "version": "0.0.2",
   "scripts": {
-    "build": "webpack",
-    "production": "NODE_ENV=production webpack --progress"
+    "start": "NODE_ENV=development webpack serve --progress",
+    "build": "NODE_ENV=development webpack --progress",
+    "prodbuild": "NODE_ENV=production webpack --progress"
   },
   "repository": {
     "type": "git",
@@ -26,7 +27,8 @@
     "ts-loader": "^9.2.3",
     "typescript": "^4.3.5",
     "webpack": "^5.44.0",
-    "webpack-cli": "^4.7.2"
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
     "react": "^17.0.2",
