--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.2",
   "scripts": {
     "start": "NODE_ENV=development webpack serve --progress",
-    "build": "NODE_ENV=development webpack --progress",
-    "prodbuild": "NODE_ENV=production webpack --progress"
+    "production": "NODE_ENV=production webpack --progress"
   },
   "repository": {
     "type": "git",
@@ -23,7 +22,10 @@
     "@types/react-dom": "^17.0.9",
     "@types/webpack": "^5.28.0",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "css-loader": "^6.0.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
+    "style-loader": "^3.1.0",
     "ts-loader": "^9.2.3",
     "typescript": "^4.3.5",
     "webpack": "^5.44.0",
